static/css/style.css
body {
    background-color: #F9FAFC;
}

.brand {
    font-family: Lato, sans-serif;
    font-size: 1.4rem;
    font-weight: 700;
    color: #4A4A4F;
}

.red-o {
    color: #E84610;
}

.thin {
    font-weight: 300;
}

.light-bg {
    background-color: #fff;
}

.dark-bg {
    background-color: #445261;
}

.main-bg {
    background-color: #F9FAFC;
}

.card {
    border: none;
    background-color: transparent;
}

.image-container {
    position: relative;
}

.image-flash {
    position: absolute;
    bottom: 5%;
    min-width: 30%;
    left: -2px;
    background-color: #23BBBB;
}

.author {
    color: white;
    margin: 4px;
    text-transform: uppercase;
}

.masthead {
    margin-top: 10px;
    overflow: hidden;
    position: relative;
    display: inline-block;
    height: 33vh;
    width: 100%;
}

.masthead-text {
    background-color: #445261;
    color: white;
    position: relative;
}

.masthead-image {
    position: relative;
    overflow: hidden;
}

.masthead-image:after {
    content: "";
    position: absolute;
    top: 0;
    right: 90%;
    height: 100%;
    width: 150%;
    background: #445261;
    -webkit-transform: skew(15deg);
    -moz-transform: skew(15deg);
    transform: skew(15deg);
    z-index: 100;
}

.post-link {
    text-decoration: none;
    color: #445261;
}

.post-link:hover,
.page-link {
    color: #E84610;
}

.post-title {
    margin-top: 20%;
    margin-left: 5%;
}

.post-subtitle {
    margin-left: 5%;
    color: lightgray;
}

.btn-signup {
    background-color: #23BBBB;
    color: #fff;
}

.btn-signup:hover,
.btn-signup:active {
    background-color: #fff;
    color: #23BBBB;
}

.link {
    color: #23BBBB;
    text-decoration: none;
}

.link:hover,
.link:active {
    color: #445261;
    text-decoration: underline;
}

.btn-like {
    color: #E84610;
    border: none;
    background: transparent;
}

.btn-like:hover,
.btn-like:active {
    color: #E84610;
    background: transparent;
    border: none;
}


/* NAVIGATION BAR */

#navbar {
  background-color: #ffffff;
}

#nav-logo {

    width: 100%;
    height: 100%; 
}


#logo-quote {

  color: white;
}

.nav-margin-mobile {

  margin-top: 381px;
}

.nav-margin-mobile-short {

  margin-top: 124px;
}

.nav-margin-tablet {

  margin-top: 381px;
}

.nav-margin-tablet-short {

  margin-top: 144px;
}

.nav-margin-pc {

  margin-top: 150px;
}

#navbar-collapse {
  font-size: large;
  background-color: #17bef6ad;
}

#nav-button-shadow {

  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
}

#navbar-dropdown-subs {

  background-color: whitesmoke;
}

#row {

  width: 110%;
}

/* ABOUT HEAD IMAGE */

.about-image {

    background: url(images/bg.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
}

#test {

    height: 100px;
}

/* PROFILE EDIT FORM */

#edit-form > form input{

  width: 100%;
}

#edit-form > form textarea{

  width: 100%;
}

#edit-form > form label{

  background-color: #343a40;
  color: #ffc107;
  margin-bottom: 15px;
  border-radius: 5px;
  padding: 5px;
  display: block;
  width: fit-content;
}

#edit-form p + p {

  border-top: 1px solid rgb(23, 162, 184);
  padding-top: 1em;
}

#edit-form > form input[type="text"]{

    padding-left: 5px;
    padding-right: 5px;
}

#edit-form > form input[type="email"]{

  padding-left: 5px;
  padding-right: 5px;
}

#edit-form > form input[type="number"]{

  padding-left: 5px;
  padding-right: 5px;
}

#edit-form > form input[type="url"]{

  padding-left: 5px;
  padding-right: 5px;
}

#edit-form > form input[type="color"]{

  width: 15%;
  margin-top: 10px;
  padding: 3px;
}

#edit-form > form input[type="checkbox"]{

  width: fit-content;
  margin-top: 10px;
  margin-left: 2px;
  transform: scale(1.2);
}

#edit-form > form input[type="date"]{

  width: fit-content;
  margin-top: 10px;
  margin-left: 7px;
  transform: scale(1.1);
  padding-left: 5px;
}

#edit-form > form textarea{

  padding-left: 5px;
  padding-right: 3px;
}

#edit-form > form p a {

  margin-top: 10px;
  margin-bottom: 10px;
  display: block;
  width: fit-content;
  background-color: #17bef63c;
  color: #343a40;
  padding: 5px;
  border-radius: 5px;
}

#edit-form > form p label:nth-of-type(2) {
  background-color: rgba(211, 211, 211, 0.66);
  color: black;
  border: 1px solid gray;
  margin-top: 20px;
  margin-bottom: 20px;
  padding: 0px 3px 0px 3px;
  margin-left: 10px;
  display: inline-block;
  border-radius: 3px;
}

#edit-form > form p input:nth-of-type(2) {
  margin-top: 10px;
  display: block;

}

/* popovers */
#profile-example {

  transform: scale(1.2);
}

[data-bs-content] {
  /* Your styles here */
  color: red;
  font-size: 16px;
  /* Add more styles as needed */
}

/* PROFILE COLLAPSE */


/* FOOTER */

.footer {

    background-color: black;
    color: rgb(255, 145, 0);
}


:target {
  padding-top: 107px;
  margin-top: -107px;
}


#sticky-profile strong {
  font-size: smaller;
}




/* PROFILE TITLES */



.profile-titles {

  width: fit-content;
}






/* BLOG TEMPLATE EXTRA CSS */
/* stylelint-disable selector-list-comma-newline-after */

.blog-header {
    line-height: 1;
    border-bottom: 1px solid #e5e5e5;
  }
  
  .blog-header-logo {
    font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
    font-size: 2.25rem;
  }
  
  .blog-header-logo:hover {
    text-decoration: none;
  }
  
  h1, h2, h3, h4, h5, h6 {
    font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
  }
  
  .display-4 {
    font-size: 2.5rem;
  }
  @media (min-width: 768px) {
    .display-4 {
      font-size: 3rem;
    }
  }
  
  .nav-scroller {
    position: relative;
    z-index: 2;
    height: 2.75rem;
    overflow-y: hidden;
  }
  
  .nav-scroller .nav {
    display: flex;
    flex-wrap: nowrap;
    padding-bottom: 1rem;
    margin-top: -1px;
    overflow-x: auto;
    text-align: center;
    white-space: nowrap;
    -webkit-overflow-scrolling: touch;
  }
  
  .nav-scroller .nav-link {
    padding-top: .75rem;
    padding-bottom: .75rem;
    font-size: .875rem;
  }
  
  .card-img-right {
    height: 100%;
    border-radius: 0 3px 3px 0;
  }
  
  .flex-auto {
    flex: 0 0 auto;
  }
  
  .h-250 { height: 250px; }
  @media (min-width: 768px) {
    .h-md-250 { height: 250px; }
  }
  
  /* Pagination */
  .blog-pagination {
    margin-bottom: 4rem;
  }
  .blog-pagination > .btn {
    border-radius: 2rem;
  }
  
  /*
   * Blog posts
   */
  .blog-post {
    margin-bottom: 4rem;
  }
  .blog-post-title {
    margin-bottom: .25rem;
    font-size: 2.5rem;
  }
  .blog-post-meta {
    margin-bottom: 1.25rem;
    color: #727272;
  }
  
  /*
   * Footer
   */
  .blog-footer {
    padding: 2.5rem 0;
    color: #727272;
    text-align: center;
    background-color: #f9f9f9;
    border-top: .05rem solid #e5e5e5;
  }
  .blog-footer p:last-child {
    margin-bottom: 0;
  }
  


/* FEATURES TEMPLATE EXTRA CSS */
.b-example-divider {
    height: 3rem;
    background-color: rgba(0, 0, 0, .1);
    border: solid rgba(0, 0, 0, .15);
    border-width: 1px 0;
    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
  }
  
  .bi {
    vertical-align: -.125em;
    fill: currentColor;
  }
  
  .feature-icon {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 4rem;
    height: 4rem;
    margin-bottom: 1rem;
    font-size: 2rem;
    color: #fff;
    border-radius: .75rem;
  }
  
  .icon-link {
    display: inline-flex;
    align-items: center;
  }
  .icon-link > .bi {
    margin-top: .125rem;
    margin-left: .125rem;
    transition: transform .25s ease-in-out;
    fill: currentColor;
  }
  .icon-link:hover > .bi {
    transform: translate(.25rem);
  }
  
  .icon-square {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 3rem;
    height: 3rem;
    font-size: 1.5rem;
    border-radius: .75rem;
  }
  
  .rounded-4 { border-radius: .5rem; }
  .rounded-5 { border-radius: 1rem; }
  
  .text-shadow-1 { text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25); }
  .text-shadow-2 { text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25); }
  .text-shadow-3 { text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25); }
  
  .card-cover {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
  }

/* PRICING TEMPLATE EXTRA STYLE */

#example-two {
    background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
  }
  
.container-dos {
max-width: 960px;
}

.pricing-header {
max-width: 700px;
}

/* SIGNIN TEMPLATE EXTRA STYLE */

.body-signin {
    display: flex;
    align-items: center;
    padding-top: 40px;
    padding-bottom: 40px;
    background-color: #f5f5f5;
    height:100%;
  }
  
  .form-signin {
    width: 100%;
    max-width: 330px;
    padding: 15px;
    margin: auto;
  }
  
  .form-signin .checkbox {
    font-weight: 400;
  }
  
  .form-signin .form-floating:focus-within {
    z-index: 2;
  }
  
  .form-signin input[type="email"] {
    margin-bottom: -1px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
  
  .form-signin input[type="password"] {
    margin-bottom: 10px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
  }
  
#sustainability_user {

  background-color: rgb(16, 198, 3);
}



/* CUSTOM BOOTSTRAP VERSION */

.fit-content {
  
  width: fit-content;
}

.fixed-button-expander {

  position: fixed;
  bottom: 0;
  right: 0;
  z-index: 9999;
}

/* MEDIA QUERIES */
@media (max-width: 296px) {
  /* CSS rules for screens under 331px */
  #nav-logo-img {
    height: 40px;
  }
  /* ... */
}

@media (max-width: 331px) {
  /* CSS rules for screens under 331px */
  #nav-logo-img {
    height: 50px;
  }
  #profile-links>div i {
    transform: scale(0.8);
    margin-left: 0.5px;
    margin-right: 0.5px;
  }
  /* ... */
}

@media (max-width: 390px) and (min-width: 320px) {
  #profile-links>div i {
    transform: scale(0.8);
    margin-left: 3px;
    margin-right: 3px;
  }
}

@media (max-width: 420px) and (min-width: 390px) {
  #profile-links>div i {
    transform: scale(1.1);
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media (max-width: 490px) and (min-width: 420px) {
  /* CSS rules for screens under 331px */
  #profile-links>div i {
    margin-left: 10px;
    margin-right: 10px;
  }
  /* ... */
}

@media (max-width: 767px) and (min-width: 490px) {
  /* CSS rules for screens under 331px */
  #profile-links>div i {
    margin-left: 15px;
    margin-right: 15px;
  }
  /* ... */
}

@media (max-width: 844px) and (min-width: 767px) {
  /* CSS rules for screens under 331px */
  #profile-links>div i {
    transform: scale(1.2);
    margin-left: 5px;
    margin-right: 5px;
  }
  /* ... */
}

@media (min-width: 768px) {
  /* CSS rules for screens under 331px */
  #profile-links>div i {
    transform: scale(1.2);
    margin-left: 5px;
    margin-right: 5px;
  }
  /* ... */
}


@media (min-width: 800px) {
  /* CSS rules for screens under 331px */
  #edit-form > form input[type="color"]{

    width: 10%;
  }
}

@media (min-width: 1000px) {
  /* CSS rules for screens under 331px */
  #edit-form > form input[type="color"]{

    width: 5%;
  }
}

